RESOLVED FIXED274687
[WebGPU] negative baseVertex is incorrectly handled in drawIndexed calls
https://bugs.webkit.org/show_bug.cgi?id=274687
Summary [WebGPU] negative baseVertex is incorrectly handled in drawIndexed calls
Mike Wyrzykowski
Reported 2024-05-24 15:23:44 PDT
[WebGPU] negative baseVertex is incorrectly handled in drawIndexed calls
Attachments
Mike Wyrzykowski
Comment 1 2024-05-24 15:25:57 PDT
Mike Wyrzykowski
Comment 2 2024-05-24 15:49:07 PDT
EWS
Comment 3 2024-05-27 21:37:43 PDT
Committed 279364@main (5a4a4bf47a33): <https://commits.webkit.org/279364@main> Reviewed commits have been landed. Closing PR #29092 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.