[WebGPU] negative baseVertex is incorrectly handled in drawIndexed calls https://bugs.webkit.org/show_bug.cgi?id=274687 <radar://128601743>

Reviewed by Tadeu Zagallo.

Negative baseVertex is allowed and also fix a previous issue where an index
buffer containing a vertexId one past the end of the vertex buffer would not
get its draw discarded.

* LayoutTests/fast/webgpu/regression/repro_274687-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_274687.html: Added.
* LayoutTests/fast/webgpu/regression/repro_274687b-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_274687b.html: Added.
Add regression tests.

* Source/WebGPU/WebGPU/Device.mm:
Fix off by one.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::storeVertexBufferCountsForValidation):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::clampIndexBufferToValidValues):
Allow negative baseVertex.

Canonical link: https://commits.webkit.org/279364@main